--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Modelo</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
  
 <body>
@@ -18,7 +18,7 @@
     </section >
  
  
-    <script src="./assets/JS/main.js"></script>
+    <script src="assets/js/main.js"></script>
  
 </body>
  
